# Project-Ren

./: .gitignore  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  DEVPLAN.md  LICENSE  README.md  package-lock.json  package.json  test-voice-orb.html
.claude/: PROJECT-STATE.md  settings.local.json
.claude/commands/: cg-devplan.md  cg-indie-deploy.md  cg-indie-observability.md  cg-oss-git-hygiene.md  cg-security-hardening.md  cg-store-listing.md
.claude/phases/: PHASE-01-active.md  PHASE-01-done.md  PHASE-02-active.md  PHASE-02-complete.md  PHASE-02-done.md  PHASE-03-active.md  PHASE-03-complete.md  PHASE-03-done.md  PHASE-03.md  PHASE-04-active.md  PHASE-04-done.md  PHASE-04.md  PHASE-05-active.md  PHASE-05-done.md  PHASE-05.md  PHASE-06-pending.md  PHASE-07-pending.md  PHASE-08-done.md  PHASE-08-pending.md
crates/ren-tts/: Cargo.toml
crates/ren-tts/src/: main.rs
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  _build-stt.bat  _dev-stt.bat  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  vad.rs  wake_consumer.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: defaults.rs  mod.rs
src-tauri/src/dismissal/: mod.rs
src-tauri/src/download/: mod.rs  verify.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/llm/: client.rs  conversation.rs  mod.rs  ollama_process.rs  prompt.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/playback/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/storage/: credentials.rs  mod.rs
src-tauri/src/stt/: mod.rs  whisper.rs
src-tauri/src/tools/: mod.rs  registry.rs
src-tauri/src/tools/apps/: launcher.rs  mod.rs
src-tauri/src/tools/files/: folders.rs  list_dir.rs  mod.rs  paths.rs  read_text.rs
src-tauri/src/tools/media/: mod.rs  session.rs
src-tauri/src/tools/memory/: mod.rs
src-tauri/src/tools/remind/: mod.rs  reminder.rs  timer.rs
src-tauri/src/tools/steam/: launcher.rs  library.rs  mod.rs  vdf.rs
src-tauri/src/tools/system/: active_window.rs  lock.rs  mod.rs  resource_usage.rs  restart.rs  running_apps.rs  shutdown.rs  volume.rs
src-tauri/src/tools/time/: mod.rs
src-tauri/src/tools/weather/: mod.rs
src-tauri/src/tools/web/: mod.rs  search.rs  weather.rs
src-tauri/src/tts/: kokoro.rs  mod.rs  process.rs
src-tauri/src/wake/: mod.rs  porcupine.rs
src/components/: ClipboardBadge.module.css  ClipboardBadge.tsx  DownloadOverlay.module.css  DownloadOverlay.tsx  Orb.module.css  Orb.tsx  Settings.module.css  Settings.tsx  StateControls.module.css  StateControls.tsx  ToolCard.module.css  ToolCard.tsx  Transcript.module.css  Transcript.tsx
src/config/: ui.ts
src/hooks/: useRenEvents.ts
src/i18n/: index.ts
src/i18n/locales/: en.json
src/store/: index.ts
src/styles/: global.css  theme.css
src/types/: index.ts
src/utils/: format.ts
