[package]
name = "ren"
version = "0.1.0"
description = "Ren — fully local, voice-first personal assistant for Windows"
authors = ["Ren Contributors"]
edition = "2021"

[lib]
name = "ren_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri               = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

# Serialization
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"

# Async runtime
tokio               = { version = "1", features = ["full"] }

# Audio capture (microphone input via WASAPI on Windows)
cpal                = "0.15"

# Voice activity detection
voice_activity_detector = "0.2"

# Speech-to-text (whisper.cpp bindings)
# Optional: only links native whisper.cpp when "stt" feature enabled.
# Allows compilation on machines without whisper.cpp built.
whisper-rs          = { version = "0.16", optional = true, features = ["cuda"] }

# Global hotkey (Ctrl+Alt+R push-to-talk)
global-hotkey       = "0.6"

# HTTP client (model downloads, Ollama API, web search)
reqwest             = { version = "0.12", features = ["json", "stream"] }

# Hashing for download verification
sha2                = "0.10"
hex                 = "0.4"

# User data directory (%APPDATA%\Ren\)
directories         = "5"

# Structured logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow              = "1"
thiserror           = "2"

# Async stream utilities
futures             = "0.3"

# Async trait support
async-trait         = "0.1"

# Base64 for DPAPI-encrypted credential envelopes.
base64              = "0.22"

# Local date/time + parsing for the time tools and reminder scheduling.
chrono              = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# CPU / memory introspection for the system-awareness tools. Cross-platform
# but we only target Windows; pulled in as a default-feature dep for now.
sysinfo             = "0.32"

# Audio playback (TTS output)
rodio               = "0.19"

# Kokoro TTS now lives in the `ren-tts` sidecar binary so its bundled ORT
# CUDA backend never collides with whisper.cpp's CUDA backend in this
# process. The main app talks to the sidecar over localhost HTTP using the
# `reqwest` client already pulled in for downloads.

# Sentence splitting for streaming TTS pipeline
unicode-segmentation = "1"

# Fuzzy matching for app launcher
strsim              = "0.11"

# Wake word detection (Picovoice Porcupine)
# Optional: only links the native Porcupine library when "wake" is enabled.
pv_porcupine        = { git = "https://github.com/Picovoice/porcupine.git", tag = "v3.0", optional = true }

# Windows-specific native APIs
[target.'cfg(windows)'.dependencies]
windows             = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Registry",
    "Win32_System_Shutdown",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Foundation",
    "Media_Control",
] }

[features]
default = []
# Enable real Whisper STT — requires whisper.cpp native build (C++ toolchain + CMake).
stt = ["whisper-rs"]
# Real TTS is always-on via the `ren-tts` sidecar binary; no extra feature flag.
# Enable Porcupine wake word detection — requires Picovoice native library at runtime.
wake = ["pv_porcupine"]
